--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ Django==5.1.2
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 et-xmlfile==1.1.0
+gunicorn==23.0.0
 mysqlclient==2.2.4
 numpy==2.1.2
 openpyxl==3.1.5
+packaging==24.1
 Paginator==0.5.1
 pandas==2.2.3
 pillow==11.0.0
